--- a/front/src/replace_after_test/index.css
+++ b/front/src/replace_after_test/index.css
@@ -7,16 +7,14 @@
 }
 
 html {
-	font-family: "Nunito", sans-serif !important;
-	font-size: 22px !important;
-	color: #fff !important;
+	font-family: "Nunito", sans-serif;
+	font-size: 22px;
+	color: #fff;
 }
 
 body {
-	min-height: 100vh !important;
-	background-color: dodgerblue !important;
-	color: #fff !important;
-	font-family: "Nunito", sans-serif !important;
+	min-height: 100vh;
+	background-color: dodgerblue;
 }
 
 .App {
@@ -26,22 +24,6 @@ body {
 	align-items: center;
 	min-height: 100vh;
 	padding: 1rem 0.5rem;
-}
-
-.map {
-	height: 75vh;
-	width: 1100px;
-	max-width: 1100px;
-	margin-bottom: 50px;
-}
-
-.marker-delivery {
-	background-image: url("https://i.imgur.com/tq2SBRI.png");
-	background-size: cover;
-	width: 50px;
-	height: 50px;
-	border-radius: 15px;
-	border: solid darkslategrey 3px;
 }
 
 section {
@@ -55,35 +37,24 @@ section {
 	background-color: rgba(0, 0, 0, 0.4);
 }
 
-.nonAuth {
-	width: 100%;
-	max-width: 1100px;
-	min-height: 400px;
+form {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	padding: 1rem;
-	background-color: rgba(0, 0, 0, 0.4);
-}
-
-form {
-	display: flex !important;
-	flex-direction: column !important;
-	justify-content: space-evenly !important;
-	padding-bottom: 1rem !important;
+	justify-content: space-evenly;
+	flex-grow: 1;
+	padding-bottom: 1rem;
 }
 
 a,
 a:visited {
-	color: #fff !important;
-	text-decoration: none;
+	color: #fff;
 }
 
 input[type="text"],
 input[type="password"],
 button,
 textarea {
-	font-family: "Nunito", sans-serif !important;
+	font-family: "Nunito", sans-serif;
 	font-size: 22px;
 	padding: 0.25rem;
 	border-radius: 0.5rem;
